<resources>
    <string name="app_name">Aco Rutas</string>
    <string name="navegacion_usuario">Usuario</string>
    <string name="navegacion_ruta">Ruta</string>
    <string name="navegacion_mapa">Mapa</string>
    <string name="navegacion_historial">Historial</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="tv_user_login">Usuario:</string>
    <string name="tv_pass_login">Contraseña:</string>
    <string name="btn_login_entrar">Entrar</string>
    <string name="btn_login_registrar">Registrarse</string>
    <string name="tv_user_form">Nikname de Usuario:</string>
    <string name="tv_correo_form">Correo:</string>
    <string name="tv_pass1_form">Contraseña:</string>
    <string name="tv_pass2_form">Repetir contraseña:</string>
    <string name="ruta">Ruta por Estaciones</string>
    <string name="tv_entacionInfo">Informacion de la Estacion</string>
    <string name="btn_login_cerrarSesion">Cerrar Sesión</string>
</resources>
